--- a/Style/global.css
+++ b/Style/global.css
@@ -1,8 +1,66 @@
 @font-face {
-  font-family: "MrsSheppards";
-  src: url("Fonts\MrsSheppards-Regular.ttf");
+  font-family: "Bello";
+  src: url("../Fonts/Bello Pro.otf");
 }
 
-section > h1 {
-  font-family: "MrsSheppards", sans-serif;
+h1,
+h2 {
+  font-family: "Bello", sans-serif;
+  font-size: 7rem;
+  font-style: italic;
+}
+
+h2 {
+  font-size: 5rem;
+  font-style: inherit;
+}
+
+body {
+  background-color: #cdb4db;
+}
+
+.dice {
+  background: #a2d2ff;
+  height: 300px;
+  width: 300px;
+  border-radius: 3vmin;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 5em;
+}
+
+.one-player,
+.one-dice {
+  grid-column: 2;
+  grid-row: 1;
+}
+.two-player,
+.two-dice {
+  grid-column: 4;
+  grid-row: 1;
+}
+
+.one-dice,
+.two-dice {
+  grid-row: 2;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 1em;
+  padding: 1em;
+  justify-items: center;
+}
+
+.point {
+  width: 5rem;
+  border-radius: 5vmin;
+  background-color: #ffafcc;
+}
+
+#six {
+  grid-column: 2;
+  grid-row: 1 / 7;
 }
