--- a/Style/global.css
+++ b/Style/global.css
@@ -3,9 +3,13 @@
   src: url("../Fonts/Bello Pro.otf");
 }
 
+body {
+  background-color: #cdb4db;
+  font-family: "Bello", sans-serif;
+}
+
 h1,
 h2 {
-  font-family: "Bello", sans-serif;
   font-size: 7rem;
   font-style: italic;
 }
@@ -15,15 +19,12 @@ h2 {
   font-style: inherit;
 }
 
-body {
-  background-color: #cdb4db;
-}
-
 .dice {
   background: #a2d2ff;
   height: 300px;
   width: 300px;
   border-radius: 3vmin;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .wrapper {
@@ -56,11 +57,8 @@ body {
 
 .point {
   width: 5rem;
-  border-radius: 5vmin;
+  border-radius: 10vmin;
   background-color: #ffafcc;
-}
-
-#six {
-  grid-column: 2;
-  grid-row: 1 / 7;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
